--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.4.1",
     "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
@@ -55,7 +58,7 @@
     "tailwindcss": "^4.1.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^4.0.0"
+    "vite": "~6.2.6"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
