--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fontawesome": "^5.6.3",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
